--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <script src="//unpkg.com/alpinejs" defer></script>
     
 
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="750708836946-p3adfgr56ts3v1j2fouhol8hg5to1m8f.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- <meta name="google-signin-scope" content="profile email"> -->
+    <!-- <meta name="google-signin-client_id" content="750708836946-p3adfgr56ts3v1j2fouhol8hg5to1m8f.apps.googleusercontent.com"> -->
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
     <title>Incremail</title>
   </head>
   <body>
